--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,59 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'node_modules/@chrisoakman/chessboardjs/dist/chessboard-1.0.0.min.css';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+.chessboard .spare-pieces-7492f {
+  display: flex;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.chessboard .square-55d63.white-1e1d7.highlight {
+  background-color: #a9a9a9;
+}
+
+.chessboard .square-55d63.black-3c85d.highlight {
+  background-color: #696969;
+}
+
+.chessboard.hide-spare .spare-pieces-7492f [data-piece] {
+  visibility: hidden;
+}
+
+.chessboard .spare-pieces-7492f [data-piece$="K"] {
+  display: none;
+}
+
+.chessboard .spare-pieces-7492f * {
+  background-color: #a9a9a9;
+}
+
+.chessboard {
+  width: min(70vw, 70vh);
+}
+
+.trash {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  padding: min(0.5vw, 0.5vh);
+  width: min(8.69vw, 8.69vh);
+  background-color: #a9a9a9;
+  height: auto;
+  position: absolute;
+  transform: translate(4%, -100%);
+}
+
+.trash.highlight {
+  background-color: #696969;
+}
+
+.trash img {
+  width: 100%;
+  height: 100%;
+}
